--- a/views/boarding.html
+++ b/views/boarding.html
@@ -7,11 +7,12 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="../public/styles/site.css">
+<link rel="stylesheet" href="/styles/site.css">
 
 </head>
+
 <body>
-    <%- include('./partials/header.ejs')%>
+<%- include('./partials/header.ejs')%>
     
 
     <div class="two">
@@ -37,6 +38,7 @@
         <p>$120 per additional night</p>
     </div>
     
-    <%- include('./partials/footer.ejs')%>
+    
 </body>
+<%- include('./partials/footer.ejs')%>
 </html>
