--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,10 +7,20 @@
               <li class="item"><a href="boarding">Boarding</a></li>
               <li class="item"><a href="grooming">Grooming</a></li>
               <li class="item"><a href="training">Training</a></li>
-              <li class="item"><a href="registration">Book Now!</a></li>
+              <li class="item"><a href="appointment">Book Now!</a></li>
+              <li class="item"><a href="registration">Register</a></li>
               <li class="item"><a href="login">Log In</a></li>
-              <li class="item"><a href="logout">Log Out</li>
               <li class="item"><a href="profile">My Profile</a></li>
             </ol>
+
+            <div style="text-align: right; float: right">
+              <% if(currentUser) { %>
+                  <a href="#">Hello, <%= currentUser %></a> <a href="/logout">Logout</a>
+              <% } %>
+      
+              <% if(!currentUser) { %>
+                  <a href="/registration">Register!</a> <a href="/login">Login</a>
+              <% } %>
+          </div>
           </nav>
     </div>
