--- a/views/registration.html
+++ b/views/registration.html
@@ -32,14 +32,14 @@ on <a href="https://unsplash.com/s/photos/dogs?utm_source=unsplash&utm_medium=re
         <p>Fill out this form to create an account.</p>
 
         <label for="psw"><b>Username</b></label>
-        <input type="text" placeholder="Username" name="username" id="username" required>
+        <input type="text" placeholder="Username" name="username" id="username" required><br><br>
         <label for="email"><b>Email</b></label>
-        <input type="email" placeholder="Enter Email" name="email" id="email" required>
+        <input type="email" placeholder="Enter Email" name="email" id="email" required><br><br>
         <label for="password"><b>Password</b></label>
-        <input type="password" placeholder="Password" name="password" id="password" required>
+        <input type="password" placeholder="Password" name="password" id="password" required><br><br>
 
 
-        <button type="submit" value="Register" class="registerBtn">Register</button>
+        <button type="submit" value="Register" class="registerBtn">Register</button><br><br>
     </div>
     
     <div class="card-content">
@@ -68,7 +68,7 @@ on <a href="https://unsplash.com/s/photos/dogs?utm_source=unsplash&utm_medium=re
     </div>
 </form>
 
-<p>Already a member? <a href="../views/login.html">Log In Now!</a></p>
+<p>Already a member? <a href="./login">Log In Now!</a></p>
 
 <%- include('./partials/footer.ejs')%>
 </body>
