--- a/views/login.html
+++ b/views/login.html
@@ -26,6 +26,8 @@
         <div class="form">
             <form action="/login" method="post">
                 <div class="form-field">
+                    <input name="_csrf" value="<%= csrfToken %>" type="hidden" />
+                    
                     <label for="username">Username</label><br />
                     <input class="input" type="text" name="username" id="username" required>
                 </div>
