--- a/views/registration.html
+++ b/views/registration.html
@@ -43,29 +43,30 @@ on <a href="https://unsplash.com/s/photos/dogs?utm_source=unsplash&utm_medium=re
     </div>
     
     <div class="card-content">
-        <% if(users.length> 0) { %>
-            <table class="center">
-                <tr>
-                    <th>Username</th>
-                    <th>Email</th>
-                </tr>
-                <tbody>
-                    <% users.forEach(function(user) { %>
-                        <tr>
-                            <td>
-                                <%= user.username %>
-                            </td>
-                            <td>
-                                <%= user.email %>
-                            </td>
-                        </tr>
-                        <% }) %>
-                </tbody>
-            </table>
-            <% } else { %>
-                <h3>Users have not been added to the MongoDB database. Try adding some!</h3>
-                <% } %>
+        <% if(users.length > 0) { %>
+        <table class="table">
+            <tr>
+                <th>Username</th>
+                <th>Created at</th>
+            </tr>
+            <tbody>
+            <% users.forEach(function(user) { %>
+            <tr>
+                <td>
+                    <%= user.username %>
+                </td>
+                <td>
+                    <%= moment(user.createdAt).format('MM-DD-YYYY') %>
+                </td>
+            </tr>
+            <% }) %>
+            </tbody>
+        </table>
+        <% } else { %>
+        <h3>Users have not been added to the MongoDB database.  Try adding some!</h3>
+        <% } %>
     </div>
+</div>
 </form>
 
 <p>Already a member? <a href="./login">Log In Now!</a></p>
